Cambio de nombre

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                 <span class="toggle-icon">🌙</span>
             </button>
         </div>
-        <h1 data-text="TRADUCTOR ESPAÑOL - NASA YUWE">Traductor Español - Nasa Yuwe</h1>
+        <h1 data-text="INTERPRETE-NASA">Traductor Español - Nasa Yuwe</h1>
         <div class="language-selector">
             <div class="language-pair">
                 <div class="source-language">
